tcp 호스트 변경

--- a/Dokkaebi/src/main/resources/application.properties
+++ b/Dokkaebi/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.root=INFO
-server.host = localhost
+server.host = 0.0.0.0
 #server.host = 49.50.175.143
 server.tcp = 5000
 server.netty.boss-count = 10
