--- a/dokkaebifront/package.json
+++ b/dokkaebifront/package.json
@@ -18,7 +18,7 @@
     "eject": "react-scripts eject"
   },
 
-  "proxy": "http://localhost:8080",
+  "proxy": "http://0.0.0.0:8080",
 
   "eslintConfig": {
     "extends": [
