스프링 get 맵핑 변경

--- a/Dokkaebi/src/main/resources/application.properties
+++ b/Dokkaebi/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.root=INFO
 server.host = 0.0.0.0
-#server.host = 49.50.175.143
+#server.host = localhost
 server.tcp = 5000
 server.netty.boss-count = 10
 server.netty.worker-count = 11
