elasticsearch 라이브러리 추가

--- a/Dokkaebi/build.gradle
+++ b/Dokkaebi/build.gradle
@@ -21,6 +21,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'mysql:mysql-connector-java'
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+
+
 
 	testImplementation group: 'junit', name: 'junit', version: '4.12'
 	compileOnly 'org.projectlombok:lombok:1.18.20'
